# fastapi-sample

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/add-crud/: SKILL.md
.claude/skills/process-file/: SKILL.md
.claude/skills/run-server/: SKILL.md
.claude/skills/run-tests/: SKILL.md
app/: main.py
app/api/routes/: files.py  items.py
app/core/: config.py  database.py  errors.py
app/crud/: item.py
app/models/: item.py
app/schemas/: item.py
app/services/: file_processor.py
docs/: CODING_CONVENTIONS.md  GIT_CONVENTIONS.md
sample_data/: items.csv  items.xlsx
tests/: conftest.py  test_files.py  test_items.py
